--- a/src/template/_head.html
+++ b/src/template/_head.html
@@ -4,12 +4,33 @@
 
 	<link
 		rel="preload"
-		href="./assets/fonts/FontName.woff2"
+		href="./assets/fonts/Inter_18pt-Regular.woff2"
+		as="font"
+		type="font/woff2"
+		crossorigin />
+
+	<link
+		rel="preload"
+		href="./assets/fonts/Inter_18pt-Medium.woff2"
+		as="font"
+		type="font/woff2"
+		crossorigin />
+
+	<link
+		rel="preload"
+		href="./assets/fonts/Inter_18pt-SemiBold.woff2"
+		as="font"
+		type="font/woff2"
+		crossorigin />
+
+	<link
+		rel="preload"
+		href="./assets/fonts/Inter_18pt-Bold.woff2"
 		as="font"
 		type="font/woff2"
 		crossorigin />
 
 	<link rel="stylesheet" href="./assets/css/main.css" />
 
-	<title>Title</title>
+	<title>Shariki</title>
 </head>
