--- a/src/assets/scss/components/_cart.scss
+++ b/src/assets/scss/components/_cart.scss
@@ -157,6 +157,7 @@
 		align-items: center;
 		justify-content: center;
 
+		height: 28px;
 		width: 30px;
 		line-height: 0;
 
@@ -207,6 +208,7 @@
 		align-items: center;
 		justify-content: center;
 
+		height: 28px;
 		width: 30px;
 		line-height: 0;
 
