--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -15,6 +15,7 @@
 @use "./components/header";
 @use "./components/footer";
 @use "./components/cart";
+@use "./components/radio";
 
 // Sections
 @use "./sections/hero";
