--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -16,6 +16,9 @@
 @use "./components/footer";
 @use "./components/cart";
 @use "./components/radio";
+@use "./components/order-form";
+@use "./components/promo";
+@use "./components/order-info";
 
 // Sections
 @use "./sections/hero";
