--- a/src/assets/scss/components/_cart.scss
+++ b/src/assets/scss/components/_cart.scss
@@ -8,6 +8,8 @@
 	padding-bottom: 6px;
 
 	&__title {
+		margin: 0;
+
 		margin-bottom: 16px;
 
 		font-weight: 600;
@@ -62,6 +64,7 @@
 	background-color: #fff;
 
 	&__title {
+		margin: 0;
 		margin-bottom: 10px;
 
 		font-weight: 600;
