--- a/src/assets/scss/components/_order-details.scss
+++ b/src/assets/scss/components/_order-details.scss
@@ -1,6 +1,6 @@
 @use "../helpers/mixins" as *;
 
-.order-info {
+.order-details {
 	font-family: var(--font-family);
 
 	border-radius: 14px;
@@ -113,9 +113,36 @@
 		transition: color 220ms ease-in-out;
 		a {
 			text-decoration: underline;
+			color: #8e8e8e;
 			@include hover {
 				color: var(--black);
 			}
 		}
+	}
+}
+
+.order-layout {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: flex-start;
+	gap: 24px;
+
+	&__col {
+		max-width: 430px;
+		width: 100%;
+
+		display: flex;
+		flex-direction: column;
+		gap: 14px;
+	}
+
+	&__radio-group {
+		max-width: 310px;
+		width: 100%;
+	}
+
+	&__order-details {
+		max-width: 340px;
+		width: 100%;
 	}
 }
