--- a/src/assets/html/components/header.html
+++ b/src/assets/html/components/header.html
@@ -1,7 +1,56 @@
 <header class="header">
-	<div class="header__container container">
-		<button class="burger btn-reset">
-			<span></span>
-		</button>
+	<div class="header__top">
+		<div class="header__top-container container">
+			<div class="header__worktime-and-location">
+				<div class="header__worktime">
+					<svg width="20" height="20">
+						<use href="./assets/img/svg/sprite.svg#time"></use>
+					</svg>
+					<span>Режим работы: с 8.00 до 22.00</span>
+				</div>
+
+				<div class="header__location">
+					<svg width="20" height="20">
+						<use href="./assets/img/svg/sprite.svg#location"></use>
+					</svg>
+					<span>Варшавское шоссе, 37А</span>
+				</div>
+			</div>
+
+			<div class="header__links">
+				<div class="header__socials">
+					<a href="#" target="_blank" class="social social--wt btn-reset">
+						<span>WhatsApp</span>
+						<svg width="20" height="20">
+							<use href="./assets/img/svg/sprite.svg#wt"></use>
+						</svg>
+					</a>
+
+					<a href="#" target="_blank" class="social social--tg btn-reset">
+						<span>Telegram</span>
+						<svg width="20" height="20">
+							<use href="./assets/img/svg/sprite.svg#tg"></use>
+						</svg>
+					</a>
+				</div>
+
+				<a href="mailto:info@ashar.ru" class="header__email">info@ashar.ru</a>
+				<a href="tel:+74952302345" class="header__phone-text-link"
+					>+7 (495) 230-23-45 </a
+				>
+				<a href="tel:+74952302345" class="header__phone-btn-link btn-reset">
+					<svg width="20" height="20">
+						<use href="./assets/img/svg/sprite.svg#phone"></use>
+					</svg>
+					<span>Перезвоните мне</span>
+				</a>
+			</div>
+		</div>
 	</div>
+	<div class="header__body"></div>
+	<div class="header__bottom"></div>
+
+	<!-- <button class="burger btn-reset">
+			<span></span>
+		</button> -->
 </header>
