--- a/src/assets/html/components/header.html
+++ b/src/assets/html/components/header.html
@@ -9,12 +9,12 @@
 					<span>Режим работы: с 8.00 до 22.00</span>
 				</div>
 
-				<div class="header__location">
+				<a href="https://a-sharik.ru/kontakty" class="header__location">
 					<svg width="20" height="20">
 						<use href="./assets/img/svg/sprite.svg#location"></use>
 					</svg>
 					<span>Варшавское шоссе, 37А</span>
-				</div>
+				</a>
 			</div>
 
 			<div class="header__links">
