--- a/src/assets/scss/helpers/_utils.scss
+++ b/src/assets/scss/helpers/_utils.scss
@@ -22,3 +22,11 @@
 	font: inherit;
 	color: inherit;
 }
+
+.container {
+	max-width: 1478px;
+	width: 100%;
+	margin: 0 auto;
+
+	padding: 0 15px;
+}
