--- a/src/assets/scss/helpers/_utils.scss
+++ b/src/assets/scss/helpers/_utils.scss
@@ -23,6 +23,12 @@
 	color: inherit;
 }
 
+.list-reset {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
 .container {
 	max-width: 1478px;
 	width: 100%;
