--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -14,5 +14,6 @@
 @use "./components/radio";
 @use "./components/order-form";
 @use "./components/promo";
+@use "./components/burger";
 @use "./components/order-details";
 @use "./components/header";
