--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -16,4 +16,5 @@
 @use "./components/promo";
 @use "./components/burger";
 @use "./components/order-details";
+@use "./components/catalog";
 @use "./components/header";
