--- a/src/template/_head.html
+++ b/src/template/_head.html
@@ -30,6 +30,10 @@
 		type="font/woff2"
 		crossorigin />
 
+	<link
+		rel="stylesheet"
+		href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
 	<link rel="stylesheet" href="./assets/css/main.css" />
 
 	<title>Shariki</title>
