--- a/src/assets/scss/components/_catalog.scss
+++ b/src/assets/scss/components/_catalog.scss
@@ -85,10 +85,17 @@
 	flex-direction: column;
 	gap: 14px;
 
+	transition: scale 150ms ease-in-out;
+
+	@include hover {
+		scale: 0.95;
+	}
+
 	&__link {
 		position: absolute;
 		z-index: 1;
 		inset: 0;
+		border-radius: 10px;
 	}
 
 	&__img {
