--- a/src/assets/html/components/header.html
+++ b/src/assets/html/components/header.html
@@ -148,13 +148,13 @@
 	<div class="header__bottom">
 		<div class="header__bottom-container container">
 			<div class="header__bottom-nav">
-				<a href="#" class="catalog-link">
-					<svg width="36" height="24">
-						<use href="./assets/img/svg/sprite.svg#balloons"></use>
+				<div href="#" class="catalog-link">
+					<svg width="20" height="20">
+						<use href="./assets/img/svg/sprite.svg#menu"></use>
 					</svg>
 
 					<span>Каталог шаров</span>
-				</a>
+				</div>
 
 				<ul class="catalog-menu list-reset">
 					<li>
