--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -17,4 +17,5 @@
 @use "./components/burger";
 @use "./components/order-details";
 @use "./components/catalog";
+@use "./components/benefits";
 @use "./components/header";
