--- a/src/assets/html/components/header.html
+++ b/src/assets/html/components/header.html
@@ -207,6 +207,338 @@
 					</li>
 				</ul>
 			</div>
+
+			<div class="top-menu-catalog-inner">
+				<ul class="">
+					<li class="menu-col">
+						<a href="/vozdushnye-shary/">Воздушные шарики</a>
+						<ul class="">
+							<li class="menu-col">
+								<a href="/vozdushnye-shary/shary-s-geliem/">Гелиевые шары</a>
+							</li>
+							<li class="menu-col">
+								<a href="/vozdushnye-shary/fontany-iz-sharov/"
+									>Фонтаны из шаров</a
+								>
+							</li>
+							<li class="menu-col">
+								<a href="/vozdushnye-shary/svetyashiesya-shary-so-svetodiodami/"
+									>Светящиеся шары</a
+								>
+							</li>
+							<li class="menu-col">
+								<a href="/vozdushnye-shary/shary-s-geliem/hvalebnye/"
+									>Хвалебные</a
+								>
+							</li>
+							<li class="menu-col">
+								<a href="/vozdushnye-shary/shary-s-geliem/oskorbitelnye/"
+									>Оскорбительные</a
+								>
+							</li>
+							<li class="menu-col">
+								<a href="/vozdushnye-shary/shari-s-konfetti/">С конфетти</a>
+							</li>
+							<li class="menu-col">
+								<a href="/vozdushnye-shary/shary-s-vashey-nadpisyu/"
+									>С печатью Вашей надписи</a
+								>
+							</li>
+							<li class="menu-col">
+								<a href="/vozdushnye-shary/bolshie-shary/">Большие шары</a>
+							</li>
+							<li class="menu-col">
+								<a href="/vozdushnye-shary/folgirovannye-shary/"
+									>Фольгированные шары</a
+								>
+							</li>
+							<li class="menu-col">
+								<a href="/vozdushnye-shary/shary-bukvy/">Буквы</a>
+							</li>
+							<li class="menu-col">
+								<a href="/vozdushnye-shary/shary-cifry/">Цифры</a>
+							</li>
+							<li class="menu-col">
+								<a href="/vozdushnye-shary/korobka-syurpriz-s-sharami/"
+									>Коробки-сюрприз</a
+								>
+							</li>
+							<li class="menu-col">
+								<a href="/vozdushnye-shary/figury-iz-sharov/"
+									>Фигуры из шаров</a
+								>
+							</li>
+							<li class="menu-col">
+								<a href="/vozdushnye-shary/cvety-iz-sharikov/"
+									>Цветы из шаров</a
+								>
+							</li>
+							<li class="menu-col">
+								<a href="/vozdushnye-shary/hodyachie-shary-figury/"
+									>Ходячие шары</a
+								>
+							</li>
+							<li class="menu-col">
+								<a href="/vozdushnye-shary/panno-iz-sharov/">Панно из шаров</a>
+							</li>
+							<li class="menu-col">
+								<a href="/vozdushnye-shary/shar-syurpriz/">Шар-сюрприз</a>
+							</li>
+							<li class="menu-col">
+								<a href="/vozdushnye-shary/salyut-iz-sharov/">Салют из шаров</a>
+							</li>
+							<li class="menu-col">
+								<a href="/vozdushnye-shary-pod-potolok/">Шары под потолок</a>
+							</li>
+							<li class="menu-col">
+								<a href="/vozdushnye-shary/steklyannye-shary-dabl-staff/"
+									>Стеклянные шары</a
+								>
+							</li>
+							<li class="menu-col">
+								<a href="vozdushnye-shary/aeromozayki-iz-sharov/"
+									>Аэромозайки из шаров</a
+								>
+							</li>
+						</ul>
+					</li>
+					<li class="menu-col">
+						<a href="">Коллекции</a>
+						<ul class="">
+							<li class="menu-col">
+								<a href="/katalog/assorti/">Шары по цветам</a>
+							</li>
+							<li class="menu-col">
+								<a href="/kollekcii/futbol/">Футбол</a>
+							</li>
+							<li class="menu-col">
+								<a href="/kollekcii/mashinki/">Машинки</a>
+							</li>
+							<li class="menu-col">
+								<a href="/kollekcii/edinorogi/">Единороги</a>
+							</li>
+							<li class="menu-col">
+								<a href="/kollekcii/frukty/">Фрукты</a>
+							</li>
+							<li class="menu-col">
+								<a href="/kollekcii/zhivotnye/">Животные</a>
+							</li>
+							<li class="menu-col">
+								<a href="/kollekcii/sladosti/">Сладости</a>
+							</li>
+							<li class="menu-col">
+								<a href="/kollekcii/dzhungli/">Джунгли</a>
+							</li>
+							<li class="menu-col">
+								<a href="/kollekcii/yumoristicheskie/">Юмористические</a>
+							</li>
+							<li class="menu-col">
+								<a href="/kollekcii/dinozavry/">Динозавры</a>
+							</li>
+							<li class="menu-col"><a href="kollekcii/kosmos/">Космос</a></li>
+						</ul>
+					</li>
+					<li class="menu-col">
+						<a href="">События и праздники</a>
+						<ul class="">
+							<li class="menu-col">
+								<a href="/katalog/shary-na-den-rozhdeniya/">День рождения</a>
+							</li>
+							<li class="menu-col">
+								<a
+									href="/katalog/shary-na-novyy-god/"
+									style="
+										color: rgb(7, 86, 232);
+										--darkreader-inline-color: #429df9;
+									"
+									data-darkreader-inline-color=""
+									>Новый год и Рождество</a
+								>
+							</li>
+							<li class="menu-col">
+								<a href="https://a-sharik.ru/katalog/shary-na-yubiley/"
+									>Юбилей</a
+								>
+							</li>
+							<li class="menu-col">
+								<a href="/katalog/shary-na-vypisku-iz-roddoma/"
+									>Выписка из роддома</a
+								>
+							</li>
+							<li class="menu-col">
+								<a href="/katalog/shary-na-devichnik/">Девичник</a>
+							</li>
+							<li class="menu-col">
+								<a href="/katalog/svidanie/">Свидание</a>
+							</li>
+							<li class="menu-col">
+								<a href="/katalog/shary-vlyublennym/">Влюбленным</a>
+							</li>
+							<li class="menu-col">
+								<a href="/katalog/shary-na-14-fevralya/">14 февраля</a>
+							</li>
+							<li class="menu-col">
+								<a href="/katalog/shary-na-1-maya/">1 мая</a>
+							</li>
+							<li class="menu-col">
+								<a href="/katalog/shary-na-9-maya/">9 мая</a>
+							</li>
+							<li class="menu-col">
+								<a href="/katalog/shary-na-23-fevralya/">23 февраля</a>
+							</li>
+							<li class="menu-col">
+								<a href="/katalog/shary-na-1-sentyabrya/">1 сентября</a>
+							</li>
+							<li class="menu-col">
+								<a href="/katalog/shary-na-den-rossii/">День России</a>
+							</li>
+							<li class="menu-col">
+								<a href="/katalog/shary-na-den-goroda/">День города</a>
+							</li>
+							<li class="menu-col">
+								<a href="/katalog/shary-na-hellouin/">Хэллоуин</a>
+							</li>
+							<li class="menu-col">
+								<a href="/katalog/shary-na-posledniy-zvonok/"
+									>Последний звонок</a
+								>
+							</li>
+							<li class="menu-col">
+								<a href="/katalog/shary-na-vypusknoy/">Выпускной</a>
+							</li>
+							<li class="menu-col">
+								<a href="/katalog/shary-na-den-materi/">День Матери</a>
+							</li>
+							<li class="menu-col">
+								<a href="/katalog/shary-na-8-marta/">8 Марта</a>
+							</li>
+						</ul>
+					</li>
+					<li class="menu-col">
+						<a href="/oformlenie-sharami/">Оформление шарами</a>
+						<ul class="">
+							<li class="menu-col">
+								<a href="oformlenie-sharami-na-den-rozhdeniya/">Дня рождения</a>
+							</li>
+							<li class="menu-col">
+								<a href="/oformlenie-svadby-sharami/">Свадьбы</a>
+							</li>
+							<li class="menu-col">
+								<a href="/fotozona-iz-sharov/">Фотозоны</a>
+							</li>
+							<li class="menu-col"><a href="/arki-iz-sharov/">Арки</a></li>
+							<li class="menu-col">
+								<a href="/girlyandy-iz-sharov/">Гирлянды</a>
+							</li>
+							<li class="menu-col">
+								<a href="/shariki-na-korporativ/">Корпоративов</a>
+							</li>
+							<li class="menu-col">
+								<a href="/shariki-na-otkrytie-magazina/">Открытия магазина</a>
+							</li>
+							<li class="menu-col">
+								<a href="/oformlenie-shkoly-sharami/">Школы</a>
+							</li>
+							<li class="menu-col">
+								<a href="/oformlenie-vystavok-sharami/">Выставок</a>
+							</li>
+							<li class="menu-col">
+								<a href="/oformlenie-sceny-sharami/">Сцены</a>
+							</li>
+							<li class="menu-col">
+								<a href="/oformlenie-sharikami-detskogo-sada/">Детского сада</a>
+							</li>
+							<li class="menu-col">
+								<a href="/oformlenie-sharami-detskih-prazdnikov/"
+									>Детских праздников</a
+								>
+							</li>
+						</ul>
+					</li>
+					<li class="menu-col">
+						<a href="/geroi-i-personazhi/">Герои и персонажи</a>
+						<ul class="">
+							<li class="menu-col">
+								<a href="/katalog/tri-kota/">Три кота</a>
+							</li>
+							<li class="menu-col">
+								<a href="katalog/garri-potter/">Гарри Поттер</a>
+							</li>
+							<li class="menu-col">
+								<a href="/katalog/smeshariki/">Смешарики</a>
+							</li>
+							<li class="menu-col">
+								<a href="/katalog/holodnoe-serdce/">Холодное сердце</a>
+							</li>
+							<li class="menu-col">
+								<a href="/katalog/masha-i-medved/">Маша и Медведь</a>
+							</li>
+							<li class="menu-col">
+								<a href="/katalog/chelovek-pauk/">Человек-паук</a>
+							</li>
+							<li class="menu-col">
+								<a href="/katalog/barboskiny/">Барбоскины</a>
+							</li>
+							<li class="menu-col"><a href="/katalog/tachki/">Тачки</a></li>
+							<li class="menu-col">
+								<a href="/katalog/vinni-puh/">Винни Пух</a>
+							</li>
+							<li class="menu-col">
+								<a href="/katalog/svinka-peppa/">Свинка Пеппа</a>
+							</li>
+							<li class="menu-col">
+								<a href="/katalog/spanch-bob/">Спанч Боб</a>
+							</li>
+							<li class="menu-col">
+								<a href="/katalog/hello-kitty/">Hello Kitty</a>
+							</li>
+							<li class="menu-col">
+								<a href="/katalog/supergeroi/">Супергерои</a>
+							</li>
+							<li class="menu-col">
+								<a href="/katalog/mi-mi-mishki/">Ми-ми-мишки</a>
+							</li>
+							<li class="menu-col">
+								<a href="/katalog/shenyachiy-patrul/">Щенячий патруль</a>
+							</li>
+							<li class="menu-col">
+								<a href="/katalog/mikki-i-minni-maus/">Микки и Минни Маус</a>
+							</li>
+							<li class="menu-col">
+								<a href="/katalog/maynkraft/">Майнкрафт</a>
+							</li>
+							<li class="menu-col">
+								<a href="https://a-sharik.ru/katalog/korol-lev/">Король Лев</a>
+							</li>
+							<li class="menu-col">
+								<a href="/katalog/siniy-traktor/">Синий Трактор</a>
+							</li>
+							<li class="menu-col">
+								<a href="https://a-sharik.ru/katalog/cheburashka/">Чебурашка</a>
+							</li>
+							<li class="menu-col">
+								<a href="https://a-sharik.ru/katalog/rusalochka/">Русалочка</a>
+							</li>
+							<li class="menu-col">
+								<a href="https://a-sharik.ru/katalog/kukly-lol/"
+									>Куклы ЛОЛ (LOL)</a
+								>
+							</li>
+							<li class="menu-col">
+								<a href="https://a-sharik.ru/katalog/princessy/">Принцессы</a>
+							</li>
+							<li class="menu-col">
+								<a href="https://a-sharik.ru/katalog/buba/">Буба</a>
+							</li>
+							<li class="menu-col">
+								<a href="https://a-sharik.ru/katalog/uensdey-wednesday/"
+									>Wednesday (Уэнсдей)</a
+								>
+							</li>
+						</ul>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</div>
 </header>
